# mathmaticRust

./: Cargo.toml
src/: config.toml  main.rs
src/config/: config.rs
src/controller/: article_controller.rs  chem_controller.rs  comment_controller.rs  favorite_controller.rs  mod.rs  user_controller.rs
src/entity/: article.rs  chem.rs  comment.rs  favorite.rs  mod.rs  preview.rs  result.rs  result_code.rs  user.rs
src/service/: article_service.rs  chem_service.rs  comment_service.rs  favorite_service.rs  lettre_service.rs  mod.rs  redis_service.rs  user_service.rs
src/static/atom/real/: demo.sh
src/test/: molecule.rs
src/util/: error.rs  jwt.rs  mod.rs  util.rs
