[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fast_log="1.2.2"
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
actix-web = "4"
actix-files = "0.6.5"
cpython = "0.7"
toml = "0.8.12"
once_cell = "1.9"
lettre = "0.11"
mime = "0.3"
redis = { version = "0.24.0",features = [ "r2d2" , "tokio-comp" ] }
jsonwebtoken = "9"
rand = "0.8.5"
